added initial  style to signup page

--- a/public/signup.html
+++ b/public/signup.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookswap</title>
-    <link rel="stylesheet" src="/css/signup.css">
+    <link rel="stylesheet" href="css/signup.css" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Welcome to Bookswap</h1>
+  <div class="title"><h1>Welcome to Bookswap</h1></div>
 
     <div class="signup-form">
         <form action="action_page.php" style="border:1px solid #ccc">
