added password validation and check if username taken check

--- a/public/signup.html
+++ b/public/signup.html
@@ -21,6 +21,7 @@
                 <label for="username"><b>Username</b></label>
                 <input id="username" type="text" placeholder="Enter Username" name="username" required>
               </div>
+              <p id="username-error"></p>
 
               <div class="field">
                 <label for="first-name"><b>First Name</b></label>
@@ -51,6 +52,7 @@
                 <label for="psw-repeat"><b>Repeat Password</b></label>
                 <input id="repeat-password" type="password" placeholder="Repeat Password" name="psw-repeat" required>
               </div>
+              <p id="password-error"></p>
               
           
               <div class="clearfix">
