updated account info

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Welcome to BookSwap!</h1>
+
     <h4><a href='/login'>Login</a> if you already have an account or <a href='/signup'>signup</a> for one today.</h4>
+
+    <h4>View account information <a href="/account">here</a>.</h4>
 </body>
 </html>
