--- a/public/login.html
+++ b/public/login.html
@@ -12,6 +12,7 @@
         <label>Password: </label><input type="password" name='pass' id='pass'>
         <input type='submit' name='submit' id='submit'>
     </form>
+    <h3><a href="/">Home</a></h3>
     <script src='../sendCreds.js'></script>
 </body>
 </html>
