Updating link to edit profile page

--- a/public/account.html
+++ b/public/account.html
@@ -28,7 +28,7 @@
         </table>
 
 
-        <h4 style="text-align: center;">Click <a href="/accountupdate">here</a> to update account information.</h4>
+        <h4 style="text-align: center;">Click <a href="/editprofile">here</a> to update account information.</h4>
 
         <h3 style="text-align: center;"><a href="/">Home</a></h3>
         
