minor link updates

--- a/public/editprofile.html
+++ b/public/editprofile.html
@@ -15,7 +15,7 @@
         <div class="title"><h1>Update Profile</h1></div>
         
         <div class="update-form">
-        <form action="/account.html" id="updateForm">
+        <form action="/account" id="updateForm">
           <p></p>
           <p class="edit-form-info">Fill in the information you would like updated and submit the form.</p>
             <fieldset>
@@ -48,7 +48,7 @@
         </form>
         </div>
 
-        <script src="editProfile.js"></script>
+        <script src="js/editProfile.js"></script>
         <footer><a class="footer" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit</a></footer>
     </body>
 </html>
