--- a/public/editprofile.html
+++ b/public/editprofile.html
@@ -42,6 +42,13 @@
                 <input type="text" id="newAddress" style="border: 1px solid black;">
                 </label>
                 </div>
+                
+                <div class="field">
+                    <p>Enter username to confirm changes. Username cannot be changed.</p>
+                    <label> Username: <br>
+                    <input type="text" id="username" style="border: 1px solid black;">
+                    </label>
+                    </div>
                 <br>
                 <input style="margin: auto; width: 150px;" type="submit" value="Submit" id="profileUpdate">
             </fieldset>
