--- a/public/myshelf.html
+++ b/public/myshelf.html
@@ -4,19 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookSwap</title>
-    <link rel="stylesheet" href="css/signup.css" type="text/css">
+    <link rel="stylesheet" href="css/shelf.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
 </head>
 <body>
-<<<<<<< HEAD
     <div class="title"><h1>Welcome to your bookshelf</h1></div>
     <div class="shelf-container">
-        
+        <a href="/account">View your account</a>
     </div>
     <footer><a class="footer" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit</a></footer>
-=======
-    <h1>Welcome to your bookshelf!</h1>
-    <a href="/account">View your account</a>
->>>>>>> e116984844c332a7ac3789d1504a75ca6a693943
 </body>
 </html>
