Update login.css and login.html

--- a/public/login.html
+++ b/public/login.html
@@ -29,7 +29,7 @@
             </div>
         </form>
     </div>
-    <footer><a class="footer" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit</a></footer>
+    <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
     <script src='../sendCreds.js'></script>
 </body>
 </html>
