--- a/public/signup.html
+++ b/public/signup.html
@@ -64,7 +64,7 @@
             </div>
           </form>
     </div>
-    <footer><a class="footer" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit</a></footer>
+    <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
     <script src="js/signup.js"></script>
 </body>
 </html>
