--- a/public/editprofile.html
+++ b/public/editprofile.html
@@ -56,6 +56,6 @@
         </div>
 
         <script src="js/editProfile.js"></script>
-        <footer><a class="footer" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit</a></footer>
+        <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
     </body>
 </html>
