Update main.css and index.html

--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,4 @@
+color: white;
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -15,6 +16,6 @@
         </h4>
         <h4>View account information <a href="/account">here</a>.</h4>
     </div>
-    <footer><a class="footer" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit</a></footer>
+    <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
 </body>
 </html>
