refactored login page and added web storage api

--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="title"><h1>Login to your account:</h1></div>
     <div class="login-form">
-        <form method='POST' action='/myshelf' style="border:1px solid #ccc">
+        <form style="border:1px solid #ccc">
             <div class="container">
                 <h1>Login</h1>
                 <p>Enter the username and password to your account.</p>
@@ -30,6 +30,6 @@
         </form>
     </div>
     <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
-    <script src='../sendCreds.js'></script>
+    <script src='js/login.js'></script>
 </body>
 </html>
