--- a/public/searchbooks.html
+++ b/public/searchbooks.html
@@ -3,10 +3,15 @@
     <head>
     <meta charset="UTF-8">
         <title>Find a Book to Add</title>
+        <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/search.css" type="text/css">
     </head>
     <body>
     <h1>Found books</h1>
+    <form>
+        <input type="text" name="search-param" id="search-param">
+        <input type="submit" id="submit-search">
+    </form>
     <div class="book-covers">
     </div>
         <script src="js/search.js"></script>
