--- a/public/searchbooks.html
+++ b/public/searchbooks.html
@@ -9,7 +9,7 @@
     <body>
     <h1>Found books</h1>
     <form>
-        <input type="text" name="search-param" id="search-param">
+        <input type="text" name="search-param" id="search-param" placeholder="Enter a Book Title or Author" required>
         <input type="submit" id="submit-search">
     </form>
     <div class="book-covers">
