--- a/public/searchbooks.html
+++ b/public/searchbooks.html
@@ -33,7 +33,7 @@
           </nav>
 
     <h1>Found books</h1>
-    <form>
+    <form class="search-books">
         <input type="text" name="search-param" id="search-param" placeholder="Enter a Book Title or Author" required>
         <input type="submit" id="submit-search">
     </form>
