add book to Books

--- a/public/myshelf.html
+++ b/public/myshelf.html
@@ -32,7 +32,8 @@
 
     <div class="title"><h1>Welcome to your bookshelf</h1></div>
     <div class="shelf-container">
-        <a href="/account">View your account</a>
+
+        <h4>Add a book<a href="/addbook"> here</a></h4>
     </div>
     <footer><a class="footer" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit</a></footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
