--- a/public/searchbooks.html
+++ b/public/searchbooks.html
@@ -37,8 +37,11 @@
         <input type="text" name="search-param" id="search-param" placeholder="Enter a Book Title or Author" required>
         <input type="submit" id="submit-search">
     </form>
-    <div class="book-covers">
-    </div>
+    <section class="book-covers">
+    </section>
+    <footer>
+        <a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a>
+    </footer>
         <script src="js/search.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
