--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@ color: white;
 
     <div class="home-container">
       <h4>
-          View available books <a href='/bookshelf'>here.</a> 
+          View available books <a href="/bookshelf.html">here.</a> 
       </h4>
     </div>
 
