--- a/public/myshelf.html
+++ b/public/myshelf.html
@@ -24,7 +24,7 @@
               </li>
          
             <li class="nav-item">
-              <a class="nav-link" href="">Bookshelf</a>
+              <a class="nav-link" href="/bookshelf.html">Bookshelf</a>
             </li>
           </ul>
         </div>
