css for bookshelf page

--- a/public/bookshelf.html
+++ b/public/bookshelf.html
@@ -7,7 +7,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/addbook.css" type="text/css">
+        <link rel="stylesheet" href="css/bookshelf.css" type="text/css">
         
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -38,13 +38,14 @@
 
         <h1 style="color: azure; text-align: center;" >Bookshelf</h1>
 
-        <h4 style="text-align: center;"><a href="/search">Search</a></h4>
+        <h4 style="text-align: center; color: azure;">Search for a book <a href="/search">here.</a></h4>
 
-        <table id="bookshelf-table" class="table table-fixed" style="color: #ebbd34; border: 2px solid #ebbd34;">
+        <table id="bookshelf-table" class="table table-fixed">
             <tr>
                 <th>Title</th>
                 <th>Author</th>
                 <th>Book Condition</th>
+                <th>View for Info</th>
             </tr>
 
         </table>
