updated account page

--- a/public/bookshelf.html
+++ b/public/bookshelf.html
@@ -45,7 +45,7 @@
                 <th>Title</th>
                 <th>Author</th>
                 <th>Book Condition</th>
-                <th>View for Info</th>
+                <th>Click to Swap</th>
             </tr>
 
         </table>
