--- a/public/account.html
+++ b/public/account.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="css/account.css" type="text/css">
         <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="stylesheet" href="css/login.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
       
@@ -36,7 +37,7 @@
           </nav>
 
 
-        <h1 class="title" style="text-align: center;">Account Information</h1>
+        <h1>Account Information</h1>
 
         <div class="account-table">
         <table class="accounts" style="margin-left: auto; margin-right: auto;">
