Updated add book to accept point field

--- a/public/addbook.html
+++ b/public/addbook.html
@@ -71,6 +71,11 @@
                       <input type="radio" id="worn" name="book_condition" value="Worn">
                       <label for="worn">Worn</label><br><br>
                       
+                      <div class="field">
+                        <label for="point_value"><b>Point Value</b></label>
+                        <input id="point_value" type="number" step="1" placeholder="Enter Point Value" name="point_value" required>
+                      </div>
+
                       <div class="clearfix">
                         <button type="button" id="addbtn">Add</button>
                         <button type="button" class="cancelbtn">Cancel</button>
