--- a/public/login.html
+++ b/public/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookSwap</title>
     <link rel="stylesheet" href="css/login.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
@@ -50,7 +51,6 @@
                     <input type="password" name='pass' id='pass'>
                 </div>
                 <input type='submit' name='submit' id='submit' class='loginbtn'>
-                <button name='home' class='homebtn' id='home'><a href="/" id='homelink'>Home</a></button>
             </div>
         </form>
     </div>
