--- a/public/searchbooks.html
+++ b/public/searchbooks.html
@@ -35,7 +35,7 @@
 
   
     <form class="search-books">
-         <h1>Found books</h1> 
+         <h1 class="title">Found books</h1> 
          <input type="text" name="search-param" id="search-param" placeholder="Enter a Book Title or Author" required>
         <input type="submit" id="submit-search">
     </form>
