--- a/public/bookshelf.html
+++ b/public/bookshelf.html
@@ -4,42 +4,49 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Bookswap</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bookshelf.css" type="text/css">
-        <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+        <script src="https://kit.fontawesome.com/d14569afa6.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="">Icon Here</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/account">Account</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/myshelf">My Bookshelf</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/faq">FAQ</a>
-                  </li>
-              </ul>
-            </div>
-          </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">
+          <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
+          <i class="fas fa-book-reader"> Bookswap</i>
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav w-100">
+            <li class="nav-item active ml-auto">
+              <a class="nav-link" href="/account">Account</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="/login">Log in <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/signup">Sign Up</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
+        <div class="maindiv">
+        <div class="title">
         <h1 style="color: azure; text-align: center;" >Bookshelf</h1>
+        </div>
 
-        <h4 style="text-align: center; color: azure;">Search for a book <a href="/search">here.</a></h4>
+        <!-- <p style="text-align: center; color: azure;">Search for a book <a href="/search">here.</a></p> -->
+
+        <a href="/search" class="btn btn-dark btn-sm" role="button" aria-pressed="true">Search books</a>
+        <br>
+  
+        <a href="/addbook" class="btn btn-dark btn-sm" role="button" aria-pressed="true">Add a book</a>
+        </div>
 
         <table id="bookshelf-table" class="table table-fixed">
             <tr>
