--- a/public/faq.html
+++ b/public/faq.html
@@ -1,46 +1,52 @@
 <!DOCTYPE html> <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>books 4 books - Frequently Asked Questions</title>
+        <title>FAQ</title>
         <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/faq.css" type="text/css">
+        <script src="https://kit.fontawesome.com/d14569afa6.js" crossorigin="anonymous"></script>
     </head>
     <body>
-      
-        <header>
-            <nav>
-                <div class="logo">
-                    <img src="logo.png" title="&copy; Books 4 Books">
-                </div>
-                <div class="nav-targets">
-                    <ul>
-                        <li><button>Page One</button></li>
-                        <li><button>Page Two</button></li>
-                        <li><button>Page Three</button></li>
-                    </ul>
-                </div>
-                <div class="user-info">
-                    <ion-icon name="book"></ion-icon>
-                    <p>Joe Booklover</p>
-                </div>
-            </nav>
-        </header>
-        <section>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">
+          <i class="fas fa-book-reader"> Bookswap</i>
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav w-100">
+            <li class="nav-item dropdown ml-auto">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Account
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/login">Sign In</a>
+                <a class="dropdown-item" href="/account">View Profile</a>
+                <a class="dropdown-item" href="/myshelf">My Bookshelf</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Sign Out</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+        <div class="title">
             <h1>Frequently Asked Questions</h1>
-        </section>
+        </div>
+        <div class="maindiv">
             <div id="accordion">
                 <div class="question">
                   <div id="headingOne">
                     <h5 class="mb-0">
                       <button class="question-header" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        How do I use books 4 books?
+                        How do I use Bookswap?
                       </button>
                     </h5>
                   </div>
-              
                   <div id="collapseOne" class="collapse " aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="answer" >
                         <ol>
@@ -101,6 +107,7 @@
                     </div>
                   </div>
                 </div>
+              </div>
               </div>
         <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
