--- a/public/bookshelf.html
+++ b/public/bookshelf.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Bookswap</title>
+        <title>Bookshelf</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="css/bookshelf.css" type="text/css">
@@ -17,16 +17,19 @@
     <body>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="/">
-          <!-- <img src="/docs/4.0/assets/brand/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt=""> -->
           <i class="fas fa-book-reader"> Bookswap</i>
         </a>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav w-100">
-            <li class="nav-item active ml-auto">
-              <a class="nav-link" href="/account">Account</a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="/login">Log in <span class="sr-only">(current)</span></a>
+            <li class="nav-item dropdown ml-auto">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Account
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/login">Sign In</a>
+                <a class="dropdown-item" href="/account">View Profile</a>
+                <a class="dropdown-item" href="/myshelf">My Bookshelf</a>
+              </div>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/signup">Sign Up</a>
