--- a/public/searchbooks.html
+++ b/public/searchbooks.html
@@ -3,40 +3,40 @@
     <head>
     <meta charset="UTF-8">
         <title>Find a Book to Add</title>
-        <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/search.css" type="text/css">
         <link rel="stylesheet" href="css/style.css" type="text/css">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/d14569afa6.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="">Icon Here</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item active">
-                  <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-             
-                <li class="nav-item">
-                  <a class="nav-link" href="/account">Account</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/myshelf">My Bookshelf</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/faq">FAQ</a>
-                  </li>
-              </ul>
-            </div>
-          </nav>
-
-  
-    <form class="search-books">
-         <h1 class="title">Found books</h1> 
-         <input type="text" name="search-param" id="search-param" placeholder="Enter a Book Title or Author" required>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="/">
+          <i class="fas fa-book-reader"> Bookswap</i>
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav w-100">
+            <li class="nav-item dropdown ml-auto">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Account
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="/login">Sign In</a>
+                <a class="dropdown-item" href="/account">View Profile</a>
+                <a class="dropdown-item" href="/myshelf">My Bookshelf</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="">Sign Out</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <h1 class="title">Found books</h1> 
+      <form class="search-books">
+         
+         <input type="text" name="search-param" id="search-param" placeholder="Enter Title or Author" required>
         <input type="submit" id="submit-search">
     </form>
     <section class="book-covers">
