--- a/public/signup.html
+++ b/public/signup.html
@@ -3,44 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookswap</title>
+    <title>Sign Up</title>
     <link rel="stylesheet" href="css/signup.css" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/d14569afa6.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="">Icon Here</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a class="navbar-brand" href="/">
+      <i class="fas fa-book-reader"> Bookswap</i>
+    </a>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      <ul class="navbar-nav w-100">
+        <li class="nav-item dropdown ml-auto">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Account
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="/login">Sign In</a>
+            <a class="dropdown-item" href="/account">View Profile</a>
+            <a class="dropdown-item" href="/myshelf">My Bookshelf</a>
+          </div>
         </li>
-     
         <li class="nav-item">
-          <a class="nav-link" href="/account">Account</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/myshelf">My Bookshelf</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href="/faq">FAQ</a>
+          <a class="nav-link" href="">Sign Out</a>
         </li>
       </ul>
     </div>
   </nav>
 
-  <div class="title"><h1>Welcome to Bookswap</h1></div>
+  <div class="title"><h1>Create Account</h1></div>
 
     <div class="signup-form">
-        <form style="border:1px solid #ccc">
+        <form>
             <div class="container">
-              <h1>Sign Up</h1>
-              <p>Please fill in this form to create an account.</p>
-              <hr>
               
               <div class="field">
                 <label for="username"><b>Username</b></label>
@@ -83,7 +81,7 @@
               <div class="clearfix">
                 <button type="button" class="cancelbtn">Cancel</button>
                 <button type="button" id="signupbtn">Sign Up</button>
-                <p>Already have an account?</p>
+                <p style="padding-top: 10px;">Already have an account?</p>
                 <button type="submit" class="signupbtn"><a href="/login">Login</a></button>
               </div>
             </div>
