--- a/public/searchbooks.html
+++ b/public/searchbooks.html
@@ -28,7 +28,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">Sign Out</a>
+              <a class="nav-link" href="/login">Sign Out</a>
             </li>
           </ul>
         </div>
