added points to bookshelf and myshelf

--- a/public/myshelf.html
+++ b/public/myshelf.html
@@ -48,6 +48,7 @@
           <th>Title</th>
           <th>Author</th>
           <th>Book Condition</th>
+          <th>Points</th>
           <!-- <th>Click to Swap</th> -->
           <th>Actions</th>
       </tr>
