--- a/public/bookshelf.html
+++ b/public/bookshelf.html
@@ -56,8 +56,10 @@
                 <th>Title</th>
                 <th>Author</th>
                 <th>Book Condition</th>
+                <th>Points</th>
                 <th>Click to Swap</th>
                 <!-- <th>Actions</th> -->
+
             </tr>
 
         </table>
