fixed update issue, added updating points function

--- a/public/myshelf.html
+++ b/public/myshelf.html
@@ -56,8 +56,8 @@
   </table>
 
     <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
-    <script type="module" src="js/deletebook.js"></script>
-    <script type="module" src='js/updatebook.js'></script>
+    <!-- <script type="module" src="js/deletebook.js"></script>
+    <script type="module" src='js/updatebook.js'></script> -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="module" src="js/myshelf.js"></script>
     <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
