--- a/public/editprofile.html
+++ b/public/editprofile.html
@@ -37,6 +37,10 @@
         </div>
       </nav>
 
+      <p id="point-display" style="color: white; text-align: right;"></p>
+      <br>
+      <br>
+
         <div class="title"><h1>Update Profile</h1></div>
         
         <div class="update-form">
@@ -75,6 +79,7 @@
         </div>
 
         <script src="js/editProfile.js"></script>
+        <script src="js/pointdisplay.js"></script>
         <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
