--- a/public/myshelf.html
+++ b/public/myshelf.html
@@ -37,6 +37,10 @@
     </div>
   </nav>
 
+  <p id="point-display" style="color: white; text-align: right;"></p>
+  <br>
+  <br>
+
     <div class="title"><h1>Your bookshelf</h1></div>
     <div class="shelf-container">
 
@@ -57,6 +61,7 @@
     <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="module" src="js/myshelf.js"></script>
+    <script src="js/pointdisplay.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
