--- a/public/searchbooks.html
+++ b/public/searchbooks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
         <title>Find a Book to Add</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/search.css" type="text/css">
         <link rel="stylesheet" href="css/style.css" type="text/css">
@@ -33,6 +34,11 @@
           </ul>
         </div>
       </nav>
+
+      <p id="point-display" style="color: white; text-align: right;"></p>
+      <br>
+      <br>
+      
       <h1 class="title">Found books</h1> 
       <form class="search-books">
          
@@ -45,6 +51,7 @@
         <a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a>
     </footer>
         <script src="js/search.js"></script>
+        <script src="js/pointdisplay.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
