Added swap table

--- a/public/account.html
+++ b/public/account.html
@@ -66,6 +66,14 @@
         <p style="text-align: center;">Click <a href="/editprofile">here</a> to update account information.</p>
         </div>
 
+        <table id="swap-table" class="table table-fixed">
+          <tr>
+              <th>Book ID</th>
+              <th>Swap Status</th>
+              <th>Actions</th>
+          </tr>
+        </table>
+
         <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
 
         <script src="js/account.js"></script>
