--- a/public/account.html
+++ b/public/account.html
@@ -68,8 +68,8 @@
 
         <table id="swap-table" class="table table-fixed">
           <tr>
-              <th>Book ID</th>
-              <th>Swap Status</th>
+              <th>Book Title</th>
+              <th>Point Value</th>
               <th>Actions</th>
           </tr>
         </table>
