added bookshelf link to nav

--- a/public/signup.html
+++ b/public/signup.html
@@ -28,6 +28,9 @@
           </div>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/bookshelf">View Books</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="">Sign Out</a>
         </li>
       </ul>
