--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
           </div>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/bookshelf">View Books</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/signup">Sign Up</a>
         </li>
       </ul>
