--- a/public/logfail.html
+++ b/public/logfail.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login Failed</title>
+    <link rel="stylesheet" href="css/login.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/d14569afa6.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -11,27 +17,33 @@
         <a class="navbar-brand" href="/">
           <i class="fas fa-book-reader"> Bookswap</i>
         </a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav w-100">
-            <li class="nav-item dropdown ml-auto">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Account
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/login">Sign In</a>
-                <a class="dropdown-item" href="/account">View Profile</a>
-                <a class="dropdown-item" href="/myshelf">My Bookshelf</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/bookshelf">View Books</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/login">Sign Out</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    <h1>UhOh! Login failed. Please <a href='./login.html'>try again</a>.</h1>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav w-100">
+          <li class="nav-item dropdown ml-auto">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Account
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/login">Sign In</a>
+              <a class="dropdown-item" href="/account">View Profile</a>
+              <a class="dropdown-item" href="/myshelf">My Bookshelf</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/bookshelf">View Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Sign Out</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="title">
+      <h1>UhOh! Login failed. Please <a href='./login.html'>try again</a>.</h1>
+    </div>
+  <footer><a class="footer photo-credit" href="https://www.pexels.com/photo/assorted-books-on-shelf-1370295/">Photo Credit:<br>Element5 Digital</a></footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
